Font Awesome & Popup maker raises Uncaught Error - FIXED
DB translate texts tool added - ADDED
Show author own posts on author page if draft or pending - CHANGED
defer and  async tags added to all GD JS - CHANGED
iframe api generation broken (by Google iframe restrictions) changed to new window popup - FIXED
WP Session removed - CHANGED

v2.0.0.14-beta
Map default language setting is not working for OpenStreetMap - FIXED
GDPR compliance - ADDED
Remove send to friend functionality as it against the GDPR policy - CHANGED
CSS responsive changes and fixes - FIXED
Search page with no query returns its own page - FIXED
Categories widget sub cats not displaying correctly - FIXED
Radio custom fields should not show Yes/No if values are 1/0 without a label - CHANGED/FIXED
Select custom field not showing 0 values - FIXED
OSM address encoder fails if site is non SSL - FIXED
Added setting to be able to disable Yoast SEO on GD pages (if active) - ADDED
Yoast details page og and twitter descriptions using template text instead of post text - FIXED
SD Widget added to be able to display the category description text - ADDED
Some problems with title and meta variables not saving or displaying correctly - FIXED
Categories on add listing page have no hierarchical distinction - FIXED
Custom fields now have placeholder setting where applicable - ADDED
Custom fields settings converted to new style to be more WP like - CHANGED
Sorting settings converted to new style to be more WP like - CHANGED
Sorting settings refactored to use sub queries (delete and re-add sort options recommended) - ADDED
OpenStreetMap populates wrong region for UK - FIXED

v2.0.0.13-beta
Page templates for building layouts now restricted from frontend viewing - CHANGED
GD page settings now contains link to edit/view pages when set - ADDED
Custom fields icon now has option to select font awesome icon from a list - ADDED
validation_pattern for custom fields can have slashes stripped which can break validation - FIXED